# -

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 21aecfc7b53d_init_v0_1_6_tables_with_task_rationale.py  476864d07e48_v0_1_plus_learning_plan_table_phase_.py  4a4c50d65c00_v0_1_plus_dialog_drop_task_module_.py  6f30ad4689ed_v0_4_phase_c_learning_plan_weakness_rank.py  d322aa7a6eac_v0_5_user_is_admin.py  df706cdc9e22_add_learning_plan_daily_hours.py  e4e0898f6a3d_v0_4_user_auth_and_invitation.py  ed1ae06bbe0d_learning_plan_status_assessment.py
backend/app/: auth.py  config.py  db.py  llm.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  auth.py  feedback.py  plan.py  progress.py  today.py
backend/scripts/: create_invitations.py  seed_fake_history.py  seed_phases.py  test_user_isolation.py
deploy/nginx/: cco-main.conf  cco.conf
deploy/systemd/: cco-backend.service  cco-frontend.service
docs/: dev-notes.md  v0.2-test-dataset-and-progress-eval.md
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: AssessmentPanel.tsx  DailyHoursEditor.tsx  HabitsEditor.tsx  LogoutButton.tsx  ModuleIcon.tsx  PhaseEditor.tsx  PrinciplesEditor.tsx  RefreshTasksButton.tsx  ResourcesEditor.tsx  TaskCard.tsx  TaskFeedbackDialog.tsx
frontend/lib/: api.ts  (+3 more)
prompts/: extract_plan.md  generate_tasks.md  status_assessment.md  user_planning_template.md  weekly_summary.md
(+10 files in other folders)
